--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -7,7 +7,7 @@
     </div>
     <div class="form-group"> 
         <label  class="form-check-label">Post</label>
-    <textarea class="form-control" rows="5" cols="50" id="multiLineInput"></textarea>
+    <textarea class="form-control" rows="5" cols="50" id="multiLineInput" name="postBody"></textarea>
     </div>
     <button class="btn btn-primary" type="submit" name="button">Publish</button>
 </form>
