--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,10 @@
 <%- include('partials/header'); -%>
 <h1>HOME</h1>
 <p><%= startingContent %></p>
+<p><%=  %></p>
+ <% posts.forEach((post) => { %>
+    <h1><%= post.title %></h1>
+    <p><%= post.content.substring(0, 100)+"..."  %></p>
+    <a href="/posts/<%= post.title %>">ReadMore</a>
+ <% }) %>
 <%- include('partials/footer'); -%>
